<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginActivity">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="192dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="username"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="176dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/btnClear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister">


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Belum punya akun? Register disini"
            android:textColor="#1F45FC"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:backgroundTint="#00008B"
            android:text="@string/login"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnClear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnClear" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClear"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#E5E4E2"
            android:text="@string/clear_field"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@+id/btnLogin"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
        <include
            android:id="@+id/loading_layout"
            layout="@layout/layout_loading"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>