<resources>
    <string name="app_name">Shopify</string>
    <string name="title_home">Home</string>
    <string name="title_todolist">Todo List</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="clear_field">Clear Field</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome, Nama Lengkap</string>
    <string name="welcome2">Happy Shopping!</string>
    <string name="alamat">Alamat</string>
...
